--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -676,7 +676,7 @@ ul.row {
     z-index: -1;
   }
 
-  *** ARTICLE PAGE ***/
+/*** ARTICLE PAGE ***/
 /* Section HERO (article)
     ============================= */
 
